examples/test/testpolicy12898.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12898
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key44: value5
      key17: value8
      key36: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value34
          key0: value45
      podSelector:
        matchLabels:
          key0: value19
          key12: value34
